Fixed visible scrollbar

--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
     font-family : 'Roboto', sans-serif;
 }
 
+body {
+    margin: 0;
+}
+
 .h1-center {
     /* center text on the page horizontally and vertically*/
     text-align: center;
@@ -11,4 +15,5 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
+    margin: 0;
 }
